# config-generator

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  Readme.md
.github/workflows/: rust.yml
crates/config-gen/: Cargo.toml
crates/config-gen/src/: env_attrs.rs  lib.rs  utils.rs
crates/test-bin/: Cargo.toml
crates/test-bin/src/: main.rs
macro_impl/: Cargo.toml
macro_impl/src/: env_attrs.rs  lib.rs  utils.rs
src/: lib.rs
tests/: env_tests.rs  mod.rs  toml_tests.rs
tests/should_fail/: simple.rs  simple.stderr
tests/tomls/: simple_config.toml
