[package]
name = "config-generator"
version = "0.0.1"
authors = ["Joseph Micheli <josephwmicheli@gmail.com>"]
description = """
A procedural macro for generating a configuration loader from
an input struct.
"""
readme = "Readme.md"
categories = ["config"]
keywords = ["derive", "macro", "configuration", "toml", "environment"]
license-file = "License"
repository = "https://github.com/jmicheli/config-generator"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "macro_impl",
]

[dependencies]
"config-gen-macro-impl" = { path = "macro_impl" }

[dev-dependencies]
trybuild = "1.0.89"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
