[package]
name = "config-generator"
version = "0.1.2"
authors = ["Joseph Micheli <josephwmicheli@gmail.com>"]
description = "A procedural macro for generating a configuration loader from an input struct."
readme = "Readme.md"
homepage = "https://github.com/jmicheli/config-generator"
categories = ["config"]
keywords = ["derive", "macro", "configuration", "toml", "environment"]
license-file = "License"
repository = "https://github.com/jmicheli/config-generator"
exclude = [".github/", ".vscode/", "tests/", ".rustfmt.toml", ".gitignore"]
edition = "2021"

[workspace]
resolver = "2"
members = [
  "macro_impl",
]

[dependencies]
"config-gen-macro-impl" = { version = "0.1.0", path = "macro_impl" }

[dev-dependencies]
trybuild = "1.0.89"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
