[package]
name = "config-gen"
version = "0.0.0"
authors = ["Joseph Micheli <josephwmicheli@gmail.com>"]
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
serde = { version = "1.0.195", features = ["derive"] }
syn = { version = "2.0.48", features = ["extra-traits", "parsing"] }
toml = "0.8.8"
